--- a/index.html
+++ b/index.html
@@ -1,10 +1,26 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN"> 
 <html>
 <head>
-<title>Lin Shiyu</title>
+<title>welcome to my website!</title> 
+<link rel="stylesheet" href="mystyle.css">
 </head>
 
 <body>
-<h1 align="center">I am Lin SHiyu.</h1>
+
+<!-- Site navigation menu --> 
+<ul class="navbar">
+<li><a href="https://linshiyu579.github.io/lin shiyu.pptx">visit my ppt</a> 
+<li><a href="https://linshiyu579.github.io/CV.docx">visit my cv</a> 
+<li><a href="https://linshiyu579.github.io/Mooncity.xlsx">visit the Mooncity.excel</a> 
+<li><a href="https://linshiyu579.github.io/piechart.xlsx">visit the piechart.excel</a>
+</ul>
+
+<!-- Main content -->
+<h1 align="center">welcome to my website!</h1>
+
+<p>It is my styled page!
+
+<h1 >I am Lin Shiyu.</h1>
 <hr align="center" size="3" width="100%">
 <h2 align="lefy"><strong>education background</h2></strong>
 <h5><i><u1>
@@ -18,11 +34,23 @@
 	<li>Volunteer for Kuala Lumpur Standard Chartered Marathon 2019.</li>
 	<li>C language.</li>
 </u1></p></i></h5>
+<h2 align="lefy"><strong>hobbies</strong></h2>
+<h5><i><p><u1>
+	<li>play badminton.</li>
+	<li>e-sports.</li>
+</u1></p></i></h5>
 <h2 align="lefy"><strong>self-assesment</strong></h2>
-<h5><i><p>I am a lively and cheerful girl. I am passionate about student work. I am willing to take the initiative to learn skills and help my friends. </p><p>I am good at planning time, arranging for various matters, and coordinating with other members.</p></i></h5>
+<h5><i>
+	<p>I am a lively and cheerful girl. I am passionate about student work.</p>
+	<p>I am willing to take the initiative to learn skills and help my friends. </p>
+	<p>I am good at time-management, arranging for various matters, and coordinating with other members.</p>
+	<p>I am responsible for others, I think responsibility is the indispensable quality of a person.</p>
+	
+</i></h5>
 
+<!-- Sign and date the page, it's only polite! --> 
+<address>Made 20 November 2019<br>
+by myself.</address>
 
-
-</body>
-
+</body> 
 </html>
