--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
 <h2 align="lefy"><strong>skills and honors</strong></h2>
 <h5><i><p><u1>
 	<li>Volunteer for Kuala Lumpur Standard Chartered Marathon 2019.</li>
-	<li>C language.</li>
+	<li>volunteer for services in XMUM CAREER & INTERNSHIP FAIR.</li>
 </u1></p></i></h5>
 <h2 align="lefy"><strong>hobbies</strong></h2>
 <h5><i><p><u1>
-	<li>play badminton.</li>
+	<li>badminton.</li>
 	<li>e-sports.</li>
 </u1></p></i></h5>
 <h2 align="lefy"><strong>self-assesment</strong></h2>
