--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 <h5><i><p><u1>
 	<li>Volunteer for Kuala Lumpur Standard Chartered Marathon 2019.</li>
 	<li>volunteer for services in XMUM CAREER & INTERNSHIP FAIR.</li>
+	<li>Participate in the Computer science and technology student union(CSU).</li>
 </u1></p></i></h5>
 <h2 align="lefy"><strong>hobbies</strong></h2>
 <h5><i><p><u1>
