--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 
 <!-- Site navigation menu --> 
 <ul class="navbar">
-<li><a href="https://linshiyu579.github.io/lin shiyu.pptx">visit my ppt</a> 
-<li><a href="https://linshiyu579.github.io/CV.docx">visit my cv</a> 
-<li><a href="https://linshiyu579.github.io/Mooncity.xlsx">visit the Mooncity.excel</a> 
-<li><a href="https://linshiyu579.github.io/piechart.xlsx">visit the piechart.excel</a>
+<li><a href="lin shiyu.pptx">visit my ppt</a> 
+<li><a href="CV.docx">visit my cv</a> 
+<li><a href="Mooncity.xlsx">visit the Mooncity.excel</a> 
+<li><a href="piechart.xlsx">visit the piechart.excel</a>
 </ul>
 
 <!-- Main content -->
